# emgame

./: CMakeLists.txt
game/: CMakeLists.txt
game/src/: main.cpp
